# solid-electrolyte-doping-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
data/interim/: README.md
data/processed/: README.md  llzo_dopant_cases.jsonl  master_dataset.csv
data/raw/: README.md
data/review/: extraction_gold_standard.csv  gold_standard_paper001_prefill.csv  human_validation_template.csv  machine_review_paper001.csv  machine_review_paper001_v2.csv  (+3 more)
docs/: PERD.md  ROADMAP.md  algorithm_design.md  database_fields.md  evidence_tracking.md  experiment_design.md  extraction_rules.md  literature_search_strategy.md  paper_storyline.md  pdf_extraction_workflow.md  pilot_dataset_plan.md  sample_level_extraction.md
notebooks/: 01_data_audit.ipynb  02_feature_exploration.ipynb  03_model_training.ipynb  04_candidate_ranking.ipynb
scripts/: build_master_dataset.py  check_extraction_completeness.py  deduplicate_literature.py  generate_figures.py  init_database.py  prepare_pdf_extraction_pilot.py  run_perd_scoring.py  run_temporal_validation.py  search_literature_batch.py  summarize_literature_pool.py  train_baselines.py  validate_dataset.py
src/perd/: utils.py  (+16 more)
tests/: test_constraints.py  test_evidence.py  test_extraction_completeness.py  test_extraction_evaluation.py  test_literature_search.py  test_machine_review.py  test_pdf_extraction.py  test_pdf_extraction_pilot.py  test_perd_features.py  test_perd_schema.py  test_perd_scoring.py  test_perd_temporal_validation.py  test_perd_validation.py  test_sample_consistency.py  test_seed_database.py  test_storage.py
(+21 files in other folders)
