[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solid-electrolyte-doping-agent"
version = "0.1.0"
description = "Literature-mined and physics-constrained dopant recommendation for LLZO solid electrolytes."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
