[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perd-solid-electrolyte"
version = "0.1.0"
description = "Performance-aware Electrolyte Rule Discovery for solid-state electrolyte dopant studies."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
